feat: add create function

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,5 +1,9 @@
 <!-- search bar -->
 <div class="container search-bar mt-5">
+  {{!-- add button --}}
+  <a href="./restaurant/new" class="d-flex justify-content-end" style="display: inline;">
+    <button class="btn btn-info">New</button>
+  </a>
   <div class="search-bar-outer">
     <div class="search-bar-inner">
       <form action="/search">
