--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -116,3 +116,11 @@ header {
   color: #aaaaaa;
   border-top: none;
 }
+
+.new_container {
+  width: 40%;
+  margin: 2em auto;
+  background-color: #f5f5f5;
+  padding: 30px;
+  border-radius: 5%;
+}
