--- a/views/new.hbs
+++ b/views/new.hbs
@@ -57,7 +57,7 @@
 
     <div class="form-group row">
       <label for="description">餐廳簡介</label>
-      <textarea name="descriptions" id="description" cols="60" rows="8" class="form-control"
+      <textarea name="description" id="description" cols="60" rows="8" class="form-control"
         placeholder="請輸入餐廳簡介"></textarea>
     </div>
 
