--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -1,4 +1,10 @@
 <h1 class="mt-3 mb-3 restaurant-show-title">{{restaurant.name}}</h1>
+<div class="container d-flex justify-content-end">
+  <form action="/restaurant/{{restaurant._id}}/edit" method="GET" class="mt-2">
+    <button class="btn btn-warning mr-1">Edit</button>
+  </form>
+</div>
+
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-10 mx-auto">
