--- a/views/index.hbs
+++ b/views/index.hbs
@@ -26,8 +26,8 @@
     <div class="col-md-10 col-12 mx-auto">
       <div class="card-columns">
 
-        {{#each restaurants}}
-        <a href="/restaurants/{{this.id}}" class="text-secondary">
+        {{#each restaurant}}
+        <a href="/restaurant/{{this._id}}" class="text-secondary">
           <div class="card mb-3">
             <img class="card-img-top" src="{{this.image}}" alt="{{this.name}}" style="height: 200px;">
             <div class="card-body p-3">
