--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -68,8 +68,11 @@
     </div>
 
     <div class="d-flex justify-content-center">
-      <button type="submit" id="submit-btn" class="btn btn-info mt-3 mr-3" onclick="saving()">Save</button>
-      <button type="submit" id="submit-btn" class="btn btn-success mt-3">Back</button>
+      <button type="submit" id="submit-btn" class="saveBtn btn mt-3 mr-3" onclick="saving()"
+        style="border-radius: 25%; border:1px solid #f5f5f5; color:#aaaaaa"><i class="fas fa-save fa-lg"></i></button>
+      <button type="submit" id="submit-btn" class="backBtn btn mt-3"
+        style="border-radius: 25%; border:1px solid #f5f5f5; color:#aaaaaa"><i
+          class="fas fa-undo-alt fa-lg"></i></button>
     </div>
   </form>
 </div>
