--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,13 +2,13 @@ header {
   overflow: hidden;
 }
 
-.navbar .navbar-brand {
-  color: #4592af;
-  font-family: 'Akaya Telivigala', cursive;
+.navbar {
+    background-color: #ced4da;
 }
 
-.navbar .navbar-brand:hover {
-  color: #226089;
+.navbar .navbar-brand {
+  color:#074163;
+  font-family: 'Berkshire Swash', cursive;
 }
 
 .banner {
@@ -23,13 +23,12 @@ header {
 .search-bar .search-bar-outer {
   margin: 0 auto;
   max-width: 680px;
-  background-color:#4593af96;
+  background-color:#dee2e6;
   border-radius: 8px;
   padding: 20px 30px;
   border: 0;
   margin-top: 5px;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
-  font-family: 'Akaya Telivigala', cursive;
 }
 
 .search-bar .search-bar-inner h4 {
@@ -82,10 +81,11 @@ header {
 .restaurant-show-title {
   position: relative;
   top: 1px;
-  color: rgba(10, 245, 225, 0.753);
+  color: #567891;
   text-align: center;
   font-size: 3rem;
   text-shadow: 0 0 0px rgb(0, 0, 0);
+  font-family: 'Sawarabi Gothic', sans-serif;
 }
 
 @media screen and (max-width: 992px) {
@@ -122,5 +122,46 @@ header {
   margin: 2em auto;
   background-color: #f5f5f5;
   padding: 30px;
-  border-radius: 5%;
+  border-radius: 3%;
 }
+
+.infoBtn:hover {
+  background-color: #074163;
+}
+
+.fa-info:hover {
+  color: aliceblue;
+}
+
+.editBtn:hover {
+  background-color: darkgoldenrod;
+}
+
+.fa-edit:hover {
+    color: aliceblue;
+}
+
+.deleteBtn:hover {
+  background-color: darkred;
+}
+
+.fa-trash-alt:hover {
+  color: aliceblue;
+}
+
+.backBtn:hover {
+  background-color: #1e7e34;
+}
+
+.fa-undo-alt:hover {
+  color: aliceblue;
+}
+
+.saveBtn:hover {
+  background-color:#064163;;
+}
+
+.fa-save:hover {
+  color: aliceblue;
+}
+
