--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,8 +10,10 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
     integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
   <link rel="stylesheet" href="/stylesheets/style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Noto+Sans+TC:wght@500&display=swap"
+    rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Sawarabi+Gothic&display=swap"
     rel="stylesheet">
   <title>Restaurant List</title>
 </head>
@@ -19,15 +21,22 @@
 <body>
 
   {{!-- nav bar --}}
-  <nav class="navbar navbar-light bg-light">
+  <nav class="navbar">
     <div class="container">
       <a class="navbar-brand" href="/">
-        <img src="https://assets-lighthouse.s3.amazonaws.com/uploads/image/file/6227/restaurant-list-logo.png"
-          width="35" height="35" class="d-inline-block align-top" alt="我的餐廳清單">
-        <span style="font-weight: bold; font-size:25px;">Restaurant List</span>
+        <img src="http://www.gshock-motel.com.tw/images/service-icon-4.png" width="35" height="35"
+          class="d-inline-block align-top mr-2" alt="我的餐廳清單">
+        <span style="font-weight: bold; font-size:25px;">Restaurant plus+</span>
+      </a>
+      {{!-- add button --}}
+      <a href="./restaurant/new" class="d-flex justify-content-end" style="display: inline;">
+        <button class="btn addBtn"
+          style="background-color:#dee2e6c2; border:inherit; color:#666a6d; border-radius:25%;"><i
+            class="fas fa-plus-square"></i></button>
       </a>
     </div>
   </nav>
+
   <div class="banner"></div>
 
   {{{body}}}
@@ -45,6 +54,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
     integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
