--- a/views/new.hbs
+++ b/views/new.hbs
@@ -1,36 +1,36 @@
 <div class="container new_container">
   <form action="/restaurant" method="POST">
     <div class="form-group row">
-      <label for="name">餐廳名稱</label>
+      <label for="name">Name</label>
       <input type="text" name="name" id="name" class="form-control" placeholder="請輸入餐廳名稱">
     </div>
 
     <div class="form-group row">
-      <label for="name_en">餐廳名稱(英文)</label>
+      <label for="name_en">English name</label>
       <input type="text" name="name_en" id="name_en" class="form-control" placeholder="請輸入餐廳英文名稱">
     </div>
 
     <div class="form-group row">
-      <label for="category">類型</label>
+      <label for="category">Category</label>
       <input list="categories" class="form-control" id="category" name="category" placeholder="請選擇類型或自行輸入">
       <datalist id="categories">
-        <option>中式</option>
-        <option>美式</option>
-        <option>泰式</option>
-        <option>日本料理</option>
-        <option>韓式料理</option>
-        <option>中東料理</option>
-        <option>咖啡</option>
+        <option>Chinese</option>
+        <option>American</option>
+        <option>Japanese</option>
+        <option>Thai</option>
+        <option>Korea</option>
+        <option>Mid-eastern</option>
+        <option>Coffee</option>
       </datalist>
     </div>
 
     <div class="form-group row">
-      <label for="image">照片</label>
+      <label for="image">Photo</label>
       <input type="text" name="image" id="image" class="form-control" placeholder="請輸入餐廳照片連結">
     </div>
 
     <div class="form-group row">
-      <label for="location">地址</label>
+      <label for="location">Address</label>
       <input type="text" name="location" id="location" class="form-control" placeholder="請輸入地址">
     </div>
 
@@ -40,29 +40,30 @@
     </div>
 
     <div class="form-group row">
-      <label for="phone">電話</label>
+      <label for="phone">Phone</label>
       <input type="text" name="phone" id="phone" class="form-control" placeholder="請輸入餐廳電話">
     </div>
 
     <div class="form-group row">
-      <label for="rating">評價</label>
+      <label for="rating">Rating</label>
       <select name="rating" id="rating" class="form-control">
-        <option value="1">1顆星</option>
-        <option value="2">2顆星</option>
-        <option value="3">3顆星</option>
-        <option value="4">4顆星</option>
-        <option value="5">5顆星</option>
+        <option value="1">1 </option>
+        <option value="2">2 </option>
+        <option value="3">3 </option>
+        <option value="4">4 </option>
+        <option value="5">5 </option>
       </select>
     </div>
 
     <div class="form-group row">
-      <label for="description">餐廳簡介</label>
+      <label for="description">Description</label>
       <textarea name="description" id="description" cols="60" rows="8" class="form-control"
         placeholder="請輸入餐廳簡介"></textarea>
     </div>
 
     <div class="d-flex justify-content-center">
-      <button type="submit" id="submit-btn" class="btn btn-info mt-3">儲存</button>
+      <button type="submit" id="submit-btn" class="saveBtn btn mt-3"
+        style="border-radius: 25%; border:1px solid #f5f5f5; color:#aaaaaa"><i class="fas fa-save fa-lg"></i></button>
     </div>
 
 
