--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -28,7 +28,7 @@
           地址：
         </span>
         {{restaurant.location}}
-        <a href="{{restaurant.googleMap}}" class="text-secondary" target="_blank">
+        <a href="{{restaurant.google_map}}" class="text-secondary" target="_blank">
           <i class="fas fa-location-arrow pr-2 fa-xs"></i>
         </a>
       </p>
@@ -46,10 +46,10 @@
       </p>
 
       <div class="row d-flex" style="flex-wrap: nowrap;">
-        <img class="rounded mx-auto mb-4 col-12" src="{{restaurant.image}}" alt="{{restaurant.name}}"
+        <img class="rounded mb-4" src="{{restaurant.image}}" alt="{{restaurant.name}}"
           style="max-width: 600px; border:0;">
         <div class="col-3">
-          <iframe src="{{restaurant.googleMap}}" width="200" height="200" style="border:0;" allowfullscreen=""
+          <iframe src="{{restaurant.googleMap}}" width="400" height="300" style="border:0;" allowfullscreen=""
             loading="lazy"></iframe>
         </div>
       </div>
