--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -1,5 +1,5 @@
 <div class="container new_container">
-  <form action="/restaurant/{{restaurant._id}}/edit" method="POST">
+  <form action="/restaurant/{{restaurant._id}}?_method=PUT" method="POST">
     <div class="form-group row">
       <label for="name">餐廳名稱</label>
       <input type="text" name="name" id="name" class="form-control" placeholder="請輸入餐廳名稱" value="{{restaurant.name}}">
