--- a/views/index.hbs
+++ b/views/index.hbs
@@ -50,7 +50,7 @@
                     style="border-radius: 25%; border:1px solid #f5f5f5; color:#aaaaaa"><i
                       class="fas fa-edit"></i></button>
                 </form>
-                <form action="./restaurant/{{this._id}}/delete" method="POST" class="mt-2">
+                <form action="./restaurant/{{this._id}}?_method=DELETE" method="POST" class="mt-2">
                   <button class="btn btn-sm mr-1 deleteBtn"
                     style="border-radius: 25%; border:1px solid #f5f5f5; color:#aaaaaa" onclick="removing()"><i
                       class="fas fa-trash-alt"></i></button>
