feat: add login & register page

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,6 +15,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Sawarabi+Gothic&display=swap"
     rel="stylesheet">
+  <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css" crossorigin="anonymous">
   <title>Restaurant List</title>
 </head>
 
@@ -41,7 +42,7 @@
 
   {{{body}}}
 
-  <div class="card-footer text-center">
+  <div class="card-footer text-center" style="background-color: #ced4da;">
     Copyright by @Marco
   </div>
 
