--- a/views/register.hbs
+++ b/views/register.hbs
@@ -5,20 +5,20 @@
       <form action="/users/register" method="POST">
         <div class="form-group">
           <label for="email">Name</label>
-          <input type="text" name="name" id="name" placeholder="enter name" class="form-control">
+          <input type="text" name="name" id="name" placeholder="enter name" class="form-control" value="{{name}}">
         </div>
         <div class="form-group">
           <label for="email">Email</label>
-          <input type="email" name="email" id="email" placeholder="enter email" class="form-control">
+          <input type="email" name="email" id="email" placeholder="enter email" class="form-control" value="{{email}}">
         </div>
         <div class="form-group">
           <label for="password">Password</label>
-          <input type="password" name="password" id="password" placeholder="enter password" class="form-control">
+          <input type="password" name="password" id="password" placeholder="enter password" class="form-control" value="{{password}}">
         </div>
         <div class="form-group">
           <label for="password">Confirm Password</label>
           <input type="password" name="confirmPassword" id="confirmPassword" placeholder="enter password again"
-            class="form-control">
+            class="form-control" value="{{confirmPassword}}">
         </div>
         <button type="submit" class="btn btn-success btn-block">Register</button>
       </form>
