--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,6 +20,11 @@
       <a class="dropdown-item" href="/sort/rating/desc">Rating: <i class="fas fa-star-half-alt"></i><i
           class="fas fa-star-half-alt"></i></a>
     </div>
+      <a href="./restaurant/new" class="d-flex justify-content-end ml-2" style="display: inline;">
+        <button class="btn addBtn"
+          style="border-radius: 10%; border:1px solid #d6d4d4; color:#aaaaaa"><i
+            class="fas fa-plus-square fa-lg"></i></button>
+      </a>
   </div>
 
   <div class="search-bar-outer">
