--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -27,6 +27,9 @@
       <a class="navbar-brand" href="/">
         <img src="http://www.gshock-motel.com.tw/images/service-icon-4.png" width="35" height="35"
           class="d-inline-block align-top mr-2" alt="我的餐廳清單">
+          {{#if isAuthenticated}}
+          <span style="font-weight: bold; font-size:25px;">{{user.name}}'s'</span>
+           {{/if}}
         <span style="font-weight: bold; font-size:25px;">Restaurant plus+</span>
       </a>
       {{!-- add button --}}
