--- a/views/login.hbs
+++ b/views/login.hbs
@@ -12,7 +12,8 @@
           <label for="password">Password</label>
           <input type="password" name="password" id="password" placeholder="enter password" class="form-control">
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Login</button>
+        <button type="submit" class="btn btn-info btn-block">Login</button>
+        <a href="/auth/facebook" class="btn btn-primary btn-block">Facebook</a>
       </form>
       <p class="lead mt-3">
         Do you have account ? <a href="/users/register">Register</a>
