--- a/views/partials/message.hbs
+++ b/views/partials/message.hbs
@@ -1,5 +1,5 @@
 {{#if successMessage}}
-<div class="alert alert-info alert-dismissible fade show" role="alert">
+<div class="alert alert-success alert-dismissible fade show" role="alert">
   {{successMessage}}
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
     <span aria-hidden="true">&times;</span>
