--- a/views/new.hbs
+++ b/views/new.hbs
@@ -35,8 +35,13 @@
     </div>
 
     <div class="form-group row">
-      <label for="googleMap">Google Map</label>
-      <input type="text" name="googleMap" id="googleMap" class="form-control" placeholder="請輸入餐廳google map連結">
+      <label for="google_map">Google Map</label>
+      <input type="text" name="google_map" id="google_map" class="form-control" placeholder="請輸入餐廳google map連結">
+    </div>
+
+    <div class="form-group row">
+      <label for="google_iframe">Google Iframe</label>
+      <input type="text" name="google_iframe" id="google_iframe" class="form-control" placeholder="請輸入餐廳google map嵌入連結">
     </div>
 
     <div class="form-group row">
