--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -5,8 +5,8 @@
         class="fas fa-edit"></i></button>
   </form>
   <form action="/restaurant/{{restaurant._id}}?_method=DELETE" method="post" class="mt-2">
-    <button type="submit" class="btn deleteBtn" onclick="removing()"
-      style="border-radius: 25%; border:1px solid #f5f5f5; color:#aaaaaa"><i class="fas fa-trash-alt ml-1"></i></button>
+    <button type="submit" class="btn deleteBtn" onclick="return removing()"
+      style="border-radius: 25%; border:1px solid #f5f5f5; color:#aaaaaa"><i class="fas fa-trash-alt"></i></button>
   </form>
 </div>
 
@@ -49,7 +49,7 @@
         <img class="rounded mb-4" src="{{restaurant.image}}" alt="{{restaurant.name}}"
           style="max-width: 600px; border:0;">
         <div class="col-3">
-          <iframe src="{{restaurant.googleMap}}" width="400" height="300" style="border:0;" allowfullscreen=""
+          <iframe src="{{restaurant.google_iframe}}" width="400" height="300" style="border:0;" allowfullscreen=""
             loading="lazy"></iframe>
         </div>
       </div>
@@ -59,11 +59,6 @@
 
 <script>
   function removing() {
-    var yes = confirm('Do you want to delete it ?');
-    if (yes) {
-      return true
-    } else {
-      return false
-    }
+    return confirm('Do you want to delete it ?')
   }
 </script>
