--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -41,7 +41,13 @@
     <div class="form-group row">
       <label for="googleMap">Google Map</label>
       <input type="text" name="googleMap" id="googleMap" class="form-control" placeholder="請輸入餐廳google map連結"
-        value="{{restaurant.googleMap}}">
+        value="{{restaurant.google_map}}">
+    </div>
+
+    <div class="form-group row">
+      <label for="google_iframe">Google Iframe</label>
+      <input type="text" name="google_iframe" id="google_iframe" class="form-control" placeholder="請輸入餐廳google map嵌入連結"
+        value="{{restaurant.google_iframe}}">
     </div>
 
     <div class="form-group row">
