--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -4,6 +4,7 @@ header {
 
 .navbar {
     background-color: #ced4da;
+    box-shadow: 0 0 2px 2px #ced4da;
 }
 
 .navbar .navbar-brand {
@@ -114,8 +115,7 @@ header {
   font-family: 'Berkshire Swash', cursive;
   color:#074163;
   font-size:large;
-  background-color: #dee2e6;;
-  border-top: none;
+  box-shadow: 0 0 3px 3px #dee2e6;
 }
 
 .new_container {
@@ -190,3 +190,11 @@ header {
   border-top: none;
 }
 
+.form-group {
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.login, .logout {
+  font-family: 'Berkshire Swash', cursive;
+}
